--- a/libraries/SuplaDevice/library.properties
+++ b/libraries/SuplaDevice/library.properties
@@ -1,11 +1,11 @@
-name=SUPLA
+name=SuplaDevice
 author=Przemyslaw Zygmunt
 email=Przemyslaw Zygmunt <przemek@supla.org>
-sentence=SUPLA Arduino library
-paragraph=
+sentence=Library for Arduino MEGA enables you to connect the device to SUPLA system.
+paragraph=The Library supports Ethernet modules based on ENC28J60 and the popular Ethernet Shield based on W5100. Regarding the ENC28J60 chip, additional UIPEthernet library must be installed.
 url=https://www.supla.org
 architectures=avr
-version=1.04
+version=1.0
 dependencies=
 core-dependencies=arduino (>=1.5.0)
 category=Communication
