--- a/libraries/SuplaDevice/library.properties
+++ b/libraries/SuplaDevice/library.properties
@@ -1,11 +1,12 @@
 name=SuplaDevice
 author=Przemyslaw Zygmunt
 email=Przemyslaw Zygmunt <przemek@supla.org>
-sentence=Library for Arduino MEGA enables you to connect the device to SUPLA system.
-paragraph=The Library supports Ethernet modules based on ENC28J60 and the popular Ethernet Shield based on W5100. Regarding the ENC28J60 chip, additional UIPEthernet library must be installed.
+maintainer=Krzysztof Lewandowski <krz.lewandowski@gmail.com>
+sentence=Library enables you to connect the device to SUPLA system.
+paragraph=The Library supports Ethernet modules based on ENC28J60 and the popular Ethernet Shield based on W5100. Regarding the ENC28J60 chip, additional UIPEthernet library must be installed. WiFi interface on ESP8266 based devices is also supported.
 url=https://www.supla.org
-architectures=avr
-version=1.5
+architectures=avr,esp8266
+version=2.3
 dependencies=
 core-dependencies=arduino (>=1.5.0)
 category=Communication
