--- a/library.properties
+++ b/library.properties
@@ -1,12 +1,11 @@
 name=SuplaDevice
-author=Przemyslaw Zygmunt
-email=Przemyslaw Zygmunt <przemek@supla.org>
+author=Przemyslaw Zygmunt <przemek@supla.org>, Krzysztof Lewandowski <krz.lewandowski@gmail.com>
 maintainer=Krzysztof Lewandowski <krz.lewandowski@gmail.com>
-sentence=Library enables you to connect the device to SUPLA system.
-paragraph=The Library supports Ethernet modules based on ENC28J60 and the popular Ethernet Shield based on W5100. Regarding the ENC28J60 chip, additional UIPEthernet library must be installed. WiFi interface on ESP8266 based devices is also supported.
-url=https://www.supla.org
+sentence=Library enables you to connect the device to the SUPLA automation system.
+paragraph=It provides easy interface for adding various sensors, relays, buttons, roller shutters, etc. that can be controlled via SUPLA Cloud and application on mobile device. 
+url=https://github.com/SUPLA/arduino
 architectures=avr,esp32,esp8266
-version=2.3
+version=2.3.2
 dependencies=
 core-dependencies=arduino (>=1.5.0)
 category=Communication
