--- a/.drone.yml
+++ b/.drone.yml
@@ -2,12 +2,15 @@ kind: pipeline
 name: default
 
 steps:
-- name: test
+- name: compilation
   image: rikorose/gcc-cmake
   commands:
   - mkdir extras/test/build
   - cd extras/test/build
   - cmake ..
   - make
-  - ./supladevicetests
 
+- name: test
+  image: rikorose/gcc-cmake
+  commands:
+  - ./supladevicetests
