--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,8 @@ set(SRCS
   supla/uptime.cpp
   supla/channel.cpp
   supla/channel_extended.cpp
+  supla/io.cpp
+  supla/tools.cpp
 )
 
 add_library(supladevicelib SHARED ${SRCS})
