Updated Arduino libraray author value

--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=SuplaDevice
-author=Przemyslaw Zygmunt <przemek@supla.org>, Krzysztof Lewandowski <krz.lewandowski@gmail.com>
+author=AC SOFTWARE SP. Z O.O.
 maintainer=Krzysztof Lewandowski <krz.lewandowski@gmail.com>
 sentence=Library enables you to connect the device to the SUPLA automation system.
 paragraph=It provides easy interface for adding various sensors, relays, buttons, roller shutters, etc. that can be controlled via SUPLA Cloud and application on mobile device. 
