Added mocks for srpc, millis Added tests for Element and Channel

--- a/extras/test/CMakeLists.txt
+++ b/extras/test/CMakeLists.txt
@@ -36,6 +36,7 @@ file(GLOB TEST_SRC
   UptimeTests/*.cpp
   ChannelTests/*cpp
   IoTests/*.cpp
+  ElementTests/*.cpp
   )
 
 file(GLOB DOUBLE_SRC doubles/*.cpp)
