Moved addAction memory allocations from predefined array to dynamic list. This change should reduce memory allocations in majority of use cases.

--- a/extras/test/CMakeLists.txt
+++ b/extras/test/CMakeLists.txt
@@ -37,6 +37,7 @@ file(GLOB TEST_SRC
   ChannelTests/*cpp
   IoTests/*.cpp
   ElementTests/*.cpp
+  LocalActionTests/*.cpp
   )
 
 file(GLOB DOUBLE_SRC doubles/*.cpp)
