Added ability to call action on Channel level. Migrated Relay to support Channel based actions

--- a/extras/test/CMakeLists.txt
+++ b/extras/test/CMakeLists.txt
@@ -39,6 +39,7 @@ file(GLOB TEST_SRC
   ElementTests/*.cpp
   LocalActionTests/*.cpp
   SensorTests/*.cpp
+  ChannelElementTests/*.cpp
   )
 
 file(GLOB DOUBLE_SRC doubles/*.cpp)
