Added baseline for Conditions in addAction Added OnLess and WhileLess conditions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -9,6 +9,9 @@ set(SRCS
   supla/channel_element.cpp
   supla/control/internal_pin_output.cpp
   supla/control/pin_status_led.cpp
+  supla/condition.cpp
+  supla/conditions/on_less.cpp
+  supla/conditions/while_less.cpp
 )
 
 add_library(supladevicelib SHARED ${SRCS})
