--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -7,8 +7,13 @@ set(SRCS
   supla/element.cpp
   supla/local_action.cpp
   supla/channel_element.cpp
+  
+  supla/storage/storage.cpp
+
   supla/control/internal_pin_output.cpp
   supla/control/pin_status_led.cpp
+  supla/control/rgbw_base.cpp
+
   supla/condition.cpp
   supla/conditions/on_less.cpp
   supla/conditions/on_less_eq.cpp
@@ -17,6 +22,7 @@ set(SRCS
   supla/conditions/on_between.cpp
   supla/conditions/on_between_eq.cpp
   supla/conditions/on_equal.cpp
+
 )
 
 add_library(supladevicelib SHARED ${SRCS})
