Enabled slack notifications on build failure

--- a/.drone.yml
+++ b/.drone.yml
@@ -37,3 +37,5 @@ steps:
       Commit: <https://github.com/{{ repo.owner }}/{{ repo.name }}/commit/{{ build.commit }}|{{ truncate build.commit 8 }}> at: <https://github.com/{{ repo.owner }}/{{ repo.name }}/commits/{{ build.branch }}|{{repo.owner}}/{{repo.name}}/{{ build.branch }}> by: {{ build.author }}
 
       <{{ build.link }}|Visit build page ↗>
+  when: [success, failure]
+
