ActionTrigger: added draft files and tests

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,6 +21,7 @@ set(SRCS
   supla/control/dimmer_leds.cpp
   supla/control/simple_button.cpp
   supla/control/button.cpp
+  supla/control/action_trigger.cpp
 
   supla/condition.cpp
   supla/conditions/on_less.cpp
