ActionTrigger: added setting of related channel. Added automatic action definition for buttons.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -39,6 +39,9 @@ set(SRCS
   supla/network/network.cpp
   supla/clock/clock.cpp
 
+  supla/sensor/therm_hygro_press_meter.cpp
+  supla/sensor/therm_hygro_meter.cpp
+  supla/sensor/thermometer.cpp
 )
 
 add_library(supladevicelib SHARED ${SRCS})
