Switched user in dockerfile to root

--- a/extras/docker/esp-idf/Dockerfile
+++ b/extras/docker/esp-idf/Dockerfile
@@ -8,10 +8,9 @@ RUN apt update && \
         python3-setuptools cmake ninja-build ccache libffi-dev libssl-dev \
         dfu-util libusb-1.0-0 python-is-python3 gcc make libncurses-dev
 
-# Add supla user and setup workdir
-RUN useradd -ms /bin/bash supla && usermod -a -G dialout supla
-USER supla
-WORKDIR /home/supla
+# Setup workdir
+RUN mkdir supla
+WORKDIR /supla
 
 # Download and install espressif toolset and ESP8266 RTOS SDK
 RUN mkdir esp && \
@@ -22,9 +21,9 @@ RUN mkdir esp && \
 
 # Download supla-device
 RUN git clone https://github.com/SUPLA/supla-device.git && mkdir projects
-WORKDIR /home/supla/projects
+WORKDIR /supla/projects
 
-ENV SUPLA_DEVICE_PATH="/home/supla/supla-device"
+ENV SUPLA_DEVICE_PATH="/supla/supla-device"
 ENV ESP_TOOLSET="esp32"
-RUN echo "source /home/supla/esp/esp-idf/export.sh" >> ~/.bashrc
+RUN echo "source /supla/esp/esp-idf/export.sh" >> ~/.bashrc
 
