Added drone compilation check for empty eps8266 rtos project. Added defauls sdkconfig for esp8266 empty project to avoid menuconfig on CI

--- a/.drone.yml
+++ b/.drone.yml
@@ -20,9 +20,16 @@ steps:
 
 - name: esp8266_rtos_compilation_check
   image: devel/esp8266_rtos_sdk
+  pull: never
   commands:
   - pwd
   - echo $SUPLA_DEVICE_PATH
+  - ls -al
+  - export SUPLA_DEVICE_PATH=/drone/src
+  - cd extras/examples/empty_esp8266_rtos_sdk_project/
+  - rm -f build/supla-empty-esp8266-mk.bin
+  - /bin/bash -c "source /supla/esp/ESP8266_RTOS_SDK/export.sh && make -j32"
+  - /bin/bash -c "[ -f build/supla-empty-esp8266-mk.bin ] && true || false"
 
 - name: rocket
   image: mike1pol/drone-rocket
