Added network interface for linux and modified example file. Linux PoC done

--- a/extras/examples/empty_linux_project/CMakeLists.txt
+++ b/extras/examples/empty_linux_project/CMakeLists.txt
@@ -6,14 +6,15 @@ set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_BUILD_TYPE Debug)
 
+find_package(OpenSSL REQUIRED)
 # Current board sources
 set(BOARD_SRC
   main.cpp
   )
 
 add_library(supladevice "")
-target_compile_definitions(supladevice PUBLIC SUPLA_LINUX)
 add_subdirectory($ENV{SUPLA_DEVICE_PATH} supla-device)
+add_subdirectory($ENV{SUPLA_DEVICE_PATH}/extras/porting/linux supla-device-linux)
 
 include_directories(
   $ENV{SUPLA_DEVICE_PATH}/src
@@ -27,5 +28,6 @@ add_executable(empty-supla-linux-example
 set_target_properties(empty-supla-linux-example PROPERTIES LINK_LIBRARIES -pthread)
 target_link_libraries (empty-supla-linux-example LINK_PUBLIC
   supladevice
+  OpenSSL::SSL
   )
 
