--- a/extras/examples/empty_esp8266_rtos_sdk_project/Makefile
+++ b/extras/examples/empty_esp8266_rtos_sdk_project/Makefile
@@ -13,5 +13,8 @@ EXTRA_COMPONENT_DIRS := $(abspath ../../supla-device/extras/esp-idf)
 $(info Using supla-device from relative path ../../supla-device/)
 endif
 
+CFLAGS += -DSUPLA_DEVICE
+CPPFLAGS += -DSUPLA_DEVICE
+
 include $(IDF_PATH)/make/project.mk
 
