ESP-IDF&RTOS: added channel state info, added SUPLA_DEVICE_ESP32 and ESP8266 compilation flags to handle differences between SDKs. Adjusted proto.h for proper struct definitions on new ESP SDKs.

--- a/extras/esp-idf/supla-device/CMakeLists.txt
+++ b/extras/esp-idf/supla-device/CMakeLists.txt
@@ -87,3 +87,4 @@ idf_component_register(SRCS
 )
 
 target_compile_definitions(${COMPONENT_LIB} PUBLIC SUPLA_DEVICE)
+target_compile_definitions(${COMPONENT_LIB} PUBLIC SUPLA_DEVICE_ESP32)
