--- a/extras/esp-idf/supla-device/CMakeLists.txt
+++ b/extras/esp-idf/supla-device/CMakeLists.txt
@@ -70,10 +70,12 @@ set(SUPLA_DEVICE_SRCS
   ../../../src/supla/sensor/therm_hygro_press_meter.cpp
   ../../../src/supla/sensor/thermometer.cpp
   ../../../src/supla/sensor/virtual_binary.cpp
+  ../../../src/supla/sensor/HC_SR04.cpp
 )
 
 set(SUPLA_DEVICE_PORTING_SRCS
   ../../porting/esp-idf/esp_idf_wifi.cpp
+  ../../porting/esp-idf/esp_idf_gpio.cpp
 )
 
 
