Fix for compilator warnings and errors (missing methods)

--- a/extras/esp-idf/supla-device/CMakeLists.txt
+++ b/extras/esp-idf/supla-device/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SUPLA_DEVICE_SRCS
   ../../../src/supla/sensor/therm_hygro_press_meter.cpp
   ../../../src/supla/sensor/thermometer.cpp
   ../../../src/supla/sensor/virtual_binary.cpp
+  ../../../src/supla/sensor/distance.cpp
   ../../../src/supla/sensor/HC_SR04.cpp
 )
 
